refactor: 추출된 데이터 저장 로직 최적화